[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["None <yamldeveloper@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
